# toodoo

./: Cargo.toml
migrations/2021-11-13-131244_todo_table/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
