[package]
name = "toodoo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# chrono = "0.4"
# jwt = "0.4.0"